# learn-vulkan-triangle

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  debugshit.cpp  debugshit.hpp  main.cpp  p_device.cpp  p_device.hpp  presentation.cpp  presentation.hpp  requirement.cpp  requirement.hpp  shaderLoading.hpp  stb_linking.hpp
shaders/: shader.frag  shader.vert
